--- a/.env
+++ b/.env
@@ -1,31 +1,18 @@
-# ------------------------------------------------------------------------------
-# DJANGO SETTINGS
-# ------------------------------------------------------------------------------
-DEBUG=True
-SECRET_KEY=django-insecure-your-very-secret-key-here-12345
-ALLOWED_HOSTS=localhost,127.0.0.1,web
-
-# ------------------------------------------------------------------------------
-# POSTGRESQL DATABASE SETTINGS
-# ------------------------------------------------------------------------------
-# Các thông tin này phải khớp với service 'db' trong docker-compose.yml
+# Database Configuration
 DB_NAME=videoprofile_db
 DB_USER=admin
 DB_PASSWORD=secretpassword
 DB_HOST=db
 DB_PORT=5432
 
-# ------------------------------------------------------------------------------
-# MINIO (S3 COMPATIBLE) SETTINGS
-# ------------------------------------------------------------------------------
-# Endpoint trỏ đến tên service 'minio' trong mạng Docker
+# Minio Configuration
 MINIO_ENDPOINT=minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
-MINIO_BUCKET_NAME=video-profiles
+MINIO_BUCKET=video-profiles
+MINIO_USE_SSL=False
 
-# ------------------------------------------------------------------------------
-# MOVIEPY & SYSTEM SETTINGS
-# ------------------------------------------------------------------------------
-# Folder tạm để MoviePy xử lý video bên trong container
-TEMP_VIDEO_DIR=/tmp/video_processing
+# Django Configuration
+SECRET_KEY=django-insecure-your-secret-key-here-change-in-production
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
