--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,71 @@
 version: '3.8'
 
 services:
-  # Database: PostgreSQL
   db:
-    image: postgres:15
-    container_name: video_profile_db
+    image: postgres:15-alpine
+    container_name: videoprofile_db
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=videoprofile_db
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=secretpassword
-
-  # Storage: Minio (S3 Compatible)
-  minio:
-    image: minio/minio
-    container_name: video_profile_minio
     ports:
-      - "9000:9000"    # API Port
-      - "9001:9001"    # Console Port (Giao diện web)
+      - "5432:5432"
+    networks:
+      - video_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  minio:
+    image: minio/minio:latest
+    container_name: videoprofile_minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
     volumes:
       - minio_data:/data
-    environment:
-      - MINIO_ROOT_USER=minioadmin
-      - MINIO_ROOT_PASSWORD=minioadmin
-    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    networks:
+      - video_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
-  # Backend & Frontend: Django
   web:
     build: .
-    container_name: video_profile_web
+    container_name: videoprofile_web
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
+      - static_volume:/app/staticfiles
+      - media_volume:/app/mediafiles
     ports:
       - "8000:8000"
-    environment:
-      - DB_NAME=videoprofile_db
-      - DB_USER=admin
-      - DB_PASSWORD=secretpassword
-      - DB_HOST=db
-      - MINIO_ENDPOINT=minio:9000
-      - MINIO_ACCESS_KEY=minioadmin
-      - MINIO_SECRET_KEY=minioadmin
+    env_file:
+      - .env
     depends_on:
-      - db
-      - minio
+      db:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+    networks:
+      - video_network
+
+networks:
+  video_network:
+    driver: bridge
 
 volumes:
   postgres_data:
   minio_data:
+  static_volume:
+  media_volume:
